# XXMLStudio

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  main.cpp
installer/: README.md
installer/linux/: build-installer.sh  xxmlstudio.desktop
installer/macos/: .env.example  Info.plist.in  build-installer.sh  entitlements.plist
installer/windows/: XXMLStudio.iss  build-installer.bat  build-installer.ps1
resources/: resources.qrc
resources/themes/: dark.qss
src/core/: Application.cpp  Application.h  IconUtils.cpp  IconUtils.h  Settings.cpp  Settings.h
src/dialogs/: AddDependencyDialog.cpp  AddDependencyDialog.h  DependencyDialog.cpp  DependencyDialog.h  FindReplaceDialog.cpp  FindReplaceDialog.h  GoToLineDialog.cpp  GoToLineDialog.h  NewProjectDialog.cpp  NewProjectDialog.h  ResumeProjectDialog.cpp  ResumeProjectDialog.h  SetUpstreamDialog.cpp  SetUpstreamDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/editor/: BookmarkManager.cpp  BookmarkManager.h  CodeEditor.cpp  CodeEditor.h  CompletionWidget.cpp  CompletionWidget.h  EditorTabWidget.cpp  EditorTabWidget.h  XXMLSyntaxHighlighter.cpp  XXMLSyntaxHighlighter.h
src/git/: GitManager.cpp  GitManager.h  GitStatusModel.cpp  GitStatusModel.h  GitTypes.h
src/lsp/: DocumentSyncManager.cpp  DocumentSyncManager.h  JsonRpcClient.cpp  JsonRpcClient.h  LSPClient.cpp  LSPClient.h  LSPProtocol.h
src/panels/: BuildOutputPanel.cpp  BuildOutputPanel.h  GitChangesPanel.cpp  GitChangesPanel.h  GitFileDecorator.cpp  GitFileDecorator.h  GitHistoryPanel.cpp  GitHistoryPanel.h  OutlinePanel.cpp  OutlinePanel.h  ProblemsPanel.cpp  ProblemsPanel.h  ProjectExplorer.cpp  ProjectExplorer.h  TerminalPanel.cpp  TerminalPanel.h
src/project/: DependencyManager.cpp  DependencyManager.h  GitFetcher.cpp  GitFetcher.h  LibraryProcessor.cpp  LibraryProcessor.h  Project.cpp  Project.h  ProjectFileParser.cpp  ProjectFileParser.h  ProjectManager.cpp  ProjectManager.h  Solution.cpp  Solution.h
src/ui/: MainWindow.cpp  MainWindow.h
src/widgets/: GitBranchWidget.cpp  GitBranchWidget.h  GitStatusIndicator.cpp  GitStatusIndicator.h
